<resources>
    <string name="app_name">WorkCubed</string>
    <string name="action_settings">Settings</string>
    <string name="pick_date">PickDate</string>
    <string name="date_label_set"></string>
    <string name="date_button_set">END</string>
    <string name="date_view_set">START</string>
    <string name="date_selected"></string>
    <string name="complete_bool">Complete</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project_title_get">Project Name</string>
    <string name="submit_button">Submit</string>
    <string name="descrip_proj">Description</string>
</resources>
