<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.github.workcubed.ProjectForm"><![CDATA[

    />
]]>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:text="@string/date_view_set"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="25dp"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"

        android:text="@string/date_button_set"
        android:layout_marginTop="160dp"
        android:layout_marginLeft="25dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_label_set"
        android:id="@+id/textView"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toRightOf="@+id/button2"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="115dp"
        android:layout_centerHorizontal="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_selected"
        android:id="@+id/textView2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toRightOf="@+id/button3"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="175dp"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete_bool"
        android:id="@+id/checkBox"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/button2"
        android:layout_marginTop="44dp"
        android:layout_alignEnd="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_title_get"
        android:id="@+id/textView3"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignParentBottom="@id/editText"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"

       />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:id="@+id/button4"
        android:layout_marginTop="74dp"
        android:layout_below="@+id/checkBox"
        android:onClick="addProject"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
